index.html to root for github pages

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
     <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Open+Sans|Oswald|Raleway|Roboto&display=swap|Dancing+Script&display=swap|" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Kalam|Marck+Script&display=swap" rel="stylesheet">
-    <link href="../lib/html5-boilerplate/dist/css/normalize.css" rel="stylesheet">
-    <link href="../lib/html5-boilerplate/dist/css/main.css" rel="stylesheet">
+    <link href="lib/html5-boilerplate/dist/css/normalize.css" rel="stylesheet">
+    <link href="lib/html5-boilerplate/dist/css/main.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/css/app.css" rel="stylesheet">
-    <link href="assets/css/boilerplate.css" rel="stylesheet">
+    <link href="app/assets/css/app.css" rel="stylesheet">
+    <link href="app/assets/css/boilerplate.css" rel="stylesheet">
 
-    <script src="../lib/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
+    <script src="lib/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
@@ -134,10 +134,10 @@
         </div>
     </footer>
 
-    <script src="../lib/angular/angular.js"></script>
-    <script src="../lib/angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="app.js"></script>
-    <script src="home/homeController.js"></script>
-    <script src="donate/donateController.js"></script>
+    <script src="lib/angular/angular.js"></script>
+    <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="app/app.js"></script>
+    <script src="app/home/homeController.js"></script>
+    <script src="app/donate/donateController.js"></script>
 </body>
 </html>
