added media queries

--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
     <link href="lib/html5-boilerplate/dist/css/normalize.css" rel="stylesheet">
     <link href="lib/html5-boilerplate/dist/css/main.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="app/assets/css/app.css" rel="stylesheet">
     <link href="app/assets/css/boilerplate.css" rel="stylesheet">
+    <link href="app/assets/css/app.css" rel="stylesheet">
+    <link href="app/assets/css/app.xl.css" rel="stylesheet">
+    <link href="app/assets/css/app.lg.css" rel="stylesheet">
+    <link href="app/assets/css/app.md.css" rel="stylesheet">
+    <link href="app/assets/css/app.sm.css" rel="stylesheet">
 
     <script src="lib/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
