--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
 
     <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Open+Sans|Oswald|Raleway|Roboto&display=swap|Dancing+Script&display=swap|" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Kalam|Marck+Script&display=swap" rel="stylesheet">
-    <link href="lib/html5-boilerplate/dist/css/normalize.css" rel="stylesheet">
-    <link href="lib/html5-boilerplate/dist/css/main.css" rel="stylesheet">
+    <link href="./lib/html5-boilerplate/dist/css/normalize.css" rel="stylesheet">
+    <link href="./lib/html5-boilerplate/dist/css/main.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="app/assets/css/boilerplate.css" rel="stylesheet">
-    <link href="app/assets/css/app.css" rel="stylesheet">
-    <link href="app/assets/css/app.xl.css" rel="stylesheet">
-    <link href="app/assets/css/app.lg.css" rel="stylesheet">
-    <link href="app/assets/css/app.md.css" rel="stylesheet">
-    <link href="app/assets/css/app.sm.css" rel="stylesheet">
+    <link href="./app/assets/css/boilerplate.css" rel="stylesheet">
+    <link href="./app/assets/css/app.css" rel="stylesheet">
+    <link href="./app/assets/css/app.xl.css" rel="stylesheet">
+    <link href="./app/assets/css/app.lg.css" rel="stylesheet">
+    <link href="./app/assets/css/app.md.css" rel="stylesheet">
+    <link href="./app/assets/css/app.sm.css" rel="stylesheet">
 
-    <script src="lib/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
+    <script src="./lib/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
@@ -116,7 +116,7 @@
                         </a>
                     </p>
                     <h5>Phone Number</h5>
-                    <a href="tel: 6148058042">(614)805-8042</a>
+                    <a href="tel: 6148058042">(614) 805-8042</a>
                     <h5>Hours</h5>
                     <p>All the live-long day</p>
                 </div>
