--- a/index.html
+++ b/index.html
@@ -15,17 +15,10 @@
     <meta content="" name="description">
     <meta content="width=device-width, initial-scale=1" name="viewport">
 
-    <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Open+Sans|Oswald|Raleway|Roboto&display=swap|Dancing+Script&display=swap|" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Kalam|Marck+Script&display=swap" rel="stylesheet">
-    <link href="./lib/html5-boilerplate/dist/css/normalize.css" rel="stylesheet">
-    <link href="./lib/html5-boilerplate/dist/css/main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway|Dancing+Script|Marck+Script&display=swap" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="./app/assets/css/boilerplate.css" rel="stylesheet">
     <link href="./app/assets/css/app.css" rel="stylesheet">
-    <link href="./app/assets/css/app.xl.css" rel="stylesheet">
-    <link href="./app/assets/css/app.lg.css" rel="stylesheet">
-    <link href="./app/assets/css/app.md.css" rel="stylesheet">
-    <link href="./app/assets/css/app.sm.css" rel="stylesheet">
 
     <script src="./lib/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
