--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,7 +1,7 @@
 <section ng-controller="HomeController as vm">
 
     <div class="overlay-container">
-        <img alt="so sad" class="w-100" src="./images/banner.jpg"/>
+        <img alt="so sad" class="w-100" src="http://corelegacy.org/images/banner_1200x650.jpg"/>
         <div class="bottom-left" id="mission-overlay">
             Offering mentorship and assistance to the youth of Columbus to help break through social barriers and stuff and other things.
         </div>
