--- a/index.html
+++ b/index.html
@@ -46,18 +46,31 @@
                 </ul>
                 <ul class="navbar-nav navbar-right">
                     <li class="nav-item dropdown active">
-                        <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="about-us-dropdown" role="button">
+                        <a aria-expanded="false"
+                           aria-haspopup="true"
+                           class="nav-link dropdown-toggle"
+                           data-toggle="dropdown"
+                           ui-sref="about-story"
+                           id="about-us-dropdown"
+                           role="button">
                             About us
                         </a>
                         <div aria-labelledby="about-us-dropdown" class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Our Story</a>
-                            <a class="dropdown-item" href="#">Our Team</a>
-                            <a class="dropdown-item" href="#">Our Partners</a>
-                            <a class="dropdown-item" href="#">Contact Us</a>
+                            <a class="dropdown-item" ui-sref="about-story">Our Story</a>
+                            <a class="dropdown-item" ui-sref="about-team">Our Team</a>
+                            <a class="dropdown-item" ui-sref="about-partners">Our Partners</a>
+                            <a class="dropdown-item" ui-sref="about-contact">Contact Us</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown active">
-                        <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle active" data-toggle="dropdown" href="#" id="events-dropdown" role="button">
+                        <a aria-expanded="false"
+                           aria-haspopup="true"
+                           class="nav-link
+                           dropdown-toggle active"
+                           data-toggle="dropdown"
+                           href="#"
+                           id="events-dropdown"
+                           role="button">
                             Events
                         </a>
                         <div aria-labelledby="events-dropdown" class="dropdown-menu">
@@ -66,14 +79,20 @@
                         </div>
                     </li>
                     <li class="nav-item dropdown active">
-                        <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle active" data-toggle="dropdown" href="#" id="participation-dropdown" role="button">
-                            Make a Difference
+                        <a aria-expanded="false"
+                           aria-haspopup="true"
+                           class="nav-link dropdown-toggle active"
+                           data-toggle="dropdown"
+                           ui-sref="contribute-sponsor"
+                           id="participation-dropdown"
+                           role="button">
+                            Contribute
                         </a>
                         <div aria-labelledby="participation-dropdown" class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Sponsor a member</a>
-                            <a class="dropdown-item" href="#">Become a mentor</a>
-                            <a class="dropdown-item" href="#">Volunteer at an event</a>
-                            <a class="dropdown-item" href="#">Financial Support</a>
+                            <a class="dropdown-item" ui-sref="contribute-sponsor">Sponsor a member</a>
+                            <a class="dropdown-item" ui-sref="contribute-mentor">Become a mentor</a>
+                            <a class="dropdown-item" ui-sref="contribute-volunteer">Volunteer at an event</a>
+                            <a class="dropdown-item" ui-sref="contribute-financial">Financial Support</a>
                         </div>
                     </li>
                     <li class="nav-item active">
@@ -83,6 +102,12 @@
             </div>
         </nav>
     </header>
+
+
+<!--    <div class="spacer-30"></div>-->
+<!--    <div class="spacer-30"></div>-->
+<!--    <div class="spacer-30"></div>-->
+<!--    <h1>{{$state.name}}</h1>-->
 
     <main ui-view></main>
 
@@ -130,15 +155,29 @@
         </div>
     </footer>
 
+
+    <!--   Angular Config   -->
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="app/app.js"></script>
     <script src="app/config.js"></script>
-    <script src="app/header/headerController.js"></script>
-    <script src="app/footer/footerController.js"></script>
-    <script src="app/home/homeController.js"></script>
-    <script src="app/donate/donateController.js"></script>
-    <script src="app/login/loginController.js"></script>
+
+    <!--   Controllers   -->
+    <script src="app/components/layout/header/headerController.js"></script>
+    <script src="app/components/layout/footer/footerController.js"></script>
+    <script src="app/components/home/homeController.js"></script>
+    <script src="app/components/donate/donateController.js"></script>
+    <script src="app/components/login/loginController.js"></script>
+    <script src="app/components/about/contact/contactController.js"></script>
+    <script src="app/components/about/partners/partnersController.js"></script>
+    <script src="app/components/about/story/storyController.js"></script>
+    <script src="app/components/about/team/teamController.js"></script>
+    <script src="app/components/contribute/financial/financialController.js"></script>
+    <script src="app/components/contribute/mentor/mentorController.js"></script>
+    <script src="app/components/contribute/sponsor/sponsorController.js"></script>
+    <script src="app/components/contribute/volunteer/volunteerController.js"></script>
+
+    <!--   Services   -->
     <script src="app/services/apiService.js"></script>
     <script src="app/services/dataService.js"></script>
     <script src="app/services/identityService.js"></script>
