Account stuff impl

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             Log In
                         </a>
                         <a class="nav-link"
-                           ui-sref="login"
+                           ui-sref="account"
                            ng-show="vm.User">
                             Account
                         </a>
@@ -186,6 +186,9 @@
     <script src="app/components/contribute/sponsor/sponsorController.js"></script>
     <script src="app/components/contribute/volunteer/volunteerController.js"></script>
     <script src="app/components/account/accountController.js"></script>
+    <script src="app/components/account/createAccountController.js"></script>
+    <script src="app/components/login/passwordRecoveryController.js"></script>
+
 
     <!--   Services   -->
     <script src="app/services/apiService.js"></script>
