Modal directive, account password reset UI

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="./app/assets/css/boilerplate.css" rel="stylesheet">
     <link href="./app/assets/css/app.css" rel="stylesheet">
+    <link href="./app/assets/css/modal.css" rel="stylesheet">
+    <link href="./app/assets/css/animations.css" rel="stylesheet">
 
     <script src="./lib/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -188,12 +190,16 @@
     <script src="app/components/account/accountController.js"></script>
     <script src="app/components/account/createAccountController.js"></script>
     <script src="app/components/login/passwordRecoveryController.js"></script>
-
+    <script src="app/components/account/accountPasswordRecoverController.js"></script>
+    <script src="app/components/account/accountPasswordResetController.js"></script>
 
     <!--   Services   -->
     <script src="app/services/apiService.js"></script>
     <script src="app/services/dataService.js"></script>
     <script src="app/services/identityService.js"></script>
     <script src="app/services/viewService.js"></script>
+
+    <!-- Directives -->
+    <script src="app/directives/modal.js"></script>
 </body>
 </html>
